--- a/src/index.css
+++ b/src/index.css
@@ -145,8 +145,9 @@ td a{
   background-color: #1D2837;
   position: relative;
   border: 1px solid black;
-  padding: 100px;
+  padding: 150px;
   color: white;
+  margin-block: 100px;
 }
 .assignments{
   background-color: #262730;
@@ -636,16 +637,7 @@ td a{
   color: white;
   border-radius: 15px;
 }
-.deleteClass{
-  display: inline-block;
-  background-color: #E34A32;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  padding: 10px;
-  margin-left: 20px;
-  margin-bottom: 20px;
-  color: white;
-  border-radius: 15px
-}
+
 .deleteButton{
   position: relative;
   margin-left: 20px;
