--- a/src/components/_Courses/modules/NewCourse.module.css
+++ b/src/components/_Courses/modules/NewCourse.module.css
@@ -6,7 +6,7 @@
   overflow:hidden;
   padding: 100px;
   height: 100%;
-  background-image: url("bg.jpg")
+  background-image: url("bg2.jpg")
   
 }
 .h1{
