--- a/src/components/_UI/modules/HomeCard.module.css
+++ b/src/components/_UI/modules/HomeCard.module.css
@@ -88,7 +88,7 @@
   position: fixed;
   margin-top: 10px;
   height: 120vh;
-  background-image: url("bg2.jpg");
+  background-image: url("bg3.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
