--- a/src/components/_Courses/modules/Courses.module.css
+++ b/src/components/_Courses/modules/Courses.module.css
@@ -6,8 +6,8 @@
   overflow:hidden;
   padding: 100px;
   height: 100%;
-  background-image: url("bg2.jpg");
-  background-size: cover;
+  background-image: url("bg3.png");
+  background-size: center;
 }
 .h1{
   position: relative;
