--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   border: 1px solid #333;
   box-shadow: 0px 0px 15px gray;
-  background-image: url("modules/bg2.jpg");
+  background-image: url("modules/bg3.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size:cover;
